# learning-based-attention-kernel-regression

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  approximations.py  baseline.py  executor.py  reproducible.py  run.py  run_benchmarks.py
docs/: api.rst  conf.py  examples.rst  index.rst  quickstart.md  quickstart.rst  theory.rst
examples/: __init__.py  basic.py  basic_usage.py  executor.py  large.py  large_scale.py
laker/: __init__.py  __main__.py  backend.py  benchmark.py  bilevel.py  core.py  correctors.py  data.py  distributed_kernels.py  embeddings.py  executor.py  implicit_diff.py  kernels.py  models.py  persistence.py  preconditioner.py  search.py  solvers.py  streaming.py  training.py  utils.py  visualize.py
tests/: conftest.py  test_advanced_features.py  test_data.py  test_distributed.py  test_embeddings.py  test_io.py  test_kernels.py  test_low_rank_kernels.py  test_math_correctness.py  test_models.py  test_preconditioner.py  test_reliability.py  test_solvers.py  test_validation.py  test_visualize.py
