[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laker"
version = "0.4.0"
description = "Learning-based Attention Kernel Regression for large-scale spectrum cartography"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LAKER Contributors"}
]
keywords = [
    "kernel regression",
    "attention kernel",
    "preconditioning",
    "spectrum cartography",
    "radio map reconstruction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy>=1.23.0",
    "torch>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0"
]
viz = [
    "matplotlib>=3.5.0"
]

[project.urls]
Homepage = "https://github.com/sachn-cs/laker"
Documentation = "https://laker.readthedocs.io"
Repository = "https://github.com/sachn-cs/laker"
Issues = "https://github.com/sachn-cs/laker/issues"

[project.scripts]
laker = "laker.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["laker*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = false

[[tool.mypy.overrides]]
module = ["torch.*", "numpy.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["laker"]
omit = ["*/tests/*", "*/examples/*", "*/docs/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
